# RTS

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  solar_frontier_wars.py
.claude/: settings.json
docs/themes/: fractured-earth.md
maps/: default.json
src/rts/: __init__.py  __main__.py  app.py  config.py
src/rts/ai/: __init__.py  ai_player.py  build_orders.py  scouting.py  threat_map.py
src/rts/ai/strategies/: __init__.py  rusher.py  tech_up.py  turtle.py
src/rts/buildings/: __init__.py  building.py  categories.py
src/rts/buildings/belt/: __init__.py
src/rts/buildings/synthetic/: __init__.py
src/rts/combat/: __init__.py  damage_types.py  projectile.py  resolver.py
src/rts/core/: __init__.py  entity.py  events.py  grid.py  mixins.py  pathfinding.py  resources.py  spatial_hash.py  steering.py  tech_tree.py
src/rts/data/: __init__.py  balance.py  building_stats.py  unit_stats.py
src/rts/factions/: __init__.py  belt_syndicate.py  faction.py  synthetic_collective.py  terran_directorate.py
src/rts/input/: __init__.py  hotkeys.py  keyboard_handler.py  mouse_handler.py
src/rts/player/: __init__.py  commands.py  human_player.py  player.py  selection.py
src/rts/ui/: __init__.py  camera_controller.py  command_panel.py  hud.py  minimap.py  selection_box.py  tooltips.py
src/rts/units/: __init__.py  categories.py  unit.py
src/rts/world/: __init__.py  fog_of_war.py  game_map.py  game_world.py  resource_node.py  tile.py
tests/: test_combat.py  test_grid.py  test_pathfinding.py  test_resources.py  test_tech_tree.py
(+12 files in other folders)
